--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,11 @@
   text-align: center;
   background-color: #000;
   color: #fff;
-  padding: 30px 100px;
+  padding-top: 30px;
+  min-height: 100vh;
+  position: relative;
+}
+
+.App::after {
+  height: 50px;
 }
