--- a/src/components/continueBtn/ContinueBtn.module.scss
+++ b/src/components/continueBtn/ContinueBtn.module.scss
@@ -1,14 +1,12 @@
 @import '../../themed-bootstrap.scss';
 .btn {
-    border-radius: 50%;
+    border-radius: 20px;
     background-color: $orange;
     color: white;
-    width: 50px;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
     border: none;
     color: #000;
     margin: 20px;
