--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -2,6 +2,6 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
-    background-color: #000;
+    height: 0px;
+    background-color: #dc1111;
 }
