--- a/src/components/menu-item/MenuItem.module.scss
+++ b/src/components/menu-item/MenuItem.module.scss
@@ -1,35 +1,33 @@
-@import '../../themed-bootstrap.scss';
+@import "../../themed-bootstrap.scss";
 
 .width {
-    width: 500px;
+  width: 500px;
 }
 
 .orange {
-color: $orange;
-padding-top: 4px;
-padding-left: 8px;
+  color: $orange;
+  padding-top: 4px;
+  padding-left: 8px;
 }
 
-.green {
-    color: rgb(138, 226, 5);
-}
+// .green {
+//   color: rgb(138, 226, 5);
+// }
 
-.ordered1 {
-    // background-color: $orange;
-    padding-top: 4px;
-    padding-left: 8px;
-    color:#e1931e80
-}
-
-.ordered2 {
+.pointer {
+  cursor: pointer;
+  padding: 10px 20px;
+  &:active {
     color: rgba(255, 255, 255, 0.5);
+  }
+  &:active div h4 {
+    color: #e1931e80;
+  }
 }
 
-.price:before {
-    content: '';
-    position: absolute;
-    bottom: 0.2rem;
-    width: 100%;
-    height: 0;
-    border-bottom: 2px dotted;
-  }
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+}
