--- a/src/components/completed-gift-card/CompletedGiftCard.module.scss
+++ b/src/components/completed-gift-card/CompletedGiftCard.module.scss
@@ -1,36 +1,46 @@
-@import '../../themed-bootstrap.scss';
+@import "../../themed-bootstrap.scss";
 
 .grid {
-    display: grid;
-    grid-column-start: 1;
-    grid-column-end: 10;
-    grid-row-start: 1;
-    grid-row-end: 12;
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 10;
+  grid-row-start: 1;
+  grid-row-end: 12;
 }
 
 .penGrid {
-    display: grid;
-    grid-column-start: 9;
-    grid-column-end: 10;
-    grid-row-start: 11;
-    grid-row-end: 12;
+  display: grid;
+  grid-column-start: 9;
+  grid-column-end: 10;
+  grid-row-start: 11;
+  grid-row-end: 12;
 }
 
 .blk {
-    cursor: pointer;
-    color: $orange;
-    background-color: #fff;
-    font-size: 34px;
-    padding: 5px;
-    margin: 12px;
-    border-radius: 50%;
-    // text-shadow: .3px .3px 5px #000;
-    &:hover {
-        color: #fff;
-        background-color: $orange;
-    }
+  cursor: pointer;
+  color: $orange;
+  background-color: #fff;
+  font-size: 34px;
+  padding: 5px;
+  margin: 12px;
+  border-radius: 50%;
+  // text-shadow: .3px .3px 5px #000;
+  &:hover {
+    color: #fff;
+    background-color: $orange;
+  }
 }
 
 .white {
-    color: #fff;
+  color: #fff;
+}
+
+.width {
+  border-radius: $radius 0px 0px $radius;
+  @media (max-width: 576px) {
+    width: 100%;
+    display: block;
+    margin-top: 15px;
+    border-radius: 0px 0px $radius $radius;
   }
+}
